# SEAL-Regression

./: .gitignore  CMakeLists.txt  README.md  benchmark.cpp  benchmark2.cpp  helper.h  kernel_logistic_regression.cpp  klr.cpp  linear_transformation.cpp  linear_transformation2.cpp  logistic_regression.cpp  logistic_regression_ckks.cpp  logistic_regression_kernel.cpp  logistic_regression_new.cpp  lr.cpp  matrix_mult_benchmark.cpp  matrix_multiplication.cpp  matrix_ops.cpp  matrix_transpose.cpp  polynomial.cpp  pulsar_stars.csv  util.cpp  vector_ops.cpp
python/: KLR.py  LR.py  load_breast_cancer.py  main.py  plot_accuracy_curve.py  plot_exp.py  plot_performance.py  plot_sigmoid.py  polt_exp.py  polt_sigmoid.py  poly.py  read_data.py  simulate_exp.py  simulate_sigmoid.py  simulate_sigmoid.sh  train.py  util.py  weights.out
python/datasets/Heart-Disease-Machine-Learning/: data.csv
python/datasets/UCI/: boston_housing.csv  breast_cancer.csv  diabetes.csv  iris.csv  load_uci.py
python/datasets/breast_cancer/: data.csv
python/datasets/heart_disease/: heart_disease.info  heart_disease_df.csv
python/datasets/pulsar_stars/: pulsar_stars.info  pulsar_stars_2000.csv
