cmake_minimum_required(VERSION 3.10)

project(SEALDemo VERSION 1.0)

find_package(OpenMP)
if (OPENMP_FOUND)
    set (CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OpenMP_C_FLAGS}")
    set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
    set (CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${OpenMP_EXE_LINKER_FLAGS}")
endif()

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)

add_executable(vector_ops vector_ops.cpp)
add_executable(benchmark benchmark.cpp)
add_executable(benchmark2 benchmark2.cpp)
add_executable(matrix_ops matrix_ops.cpp)
add_executable(linear_transformation linear_transformation.cpp)
add_executable(linear_transformation2 linear_transformation2.cpp)
add_executable(matrix_multiplication matrix_multiplication.cpp)
add_executable(matrix_mult_benchmark matrix_mult_benchmark.cpp)
add_executable(polynomial polynomial.cpp)
add_executable(logistic_regression logistic_regression.cpp)
add_executable(logistic_regression_new logistic_regression_new.cpp)
add_executable(logistic_regression_kernel logistic_regression_kernel.cpp)
add_executable(matrix_transpose matrix_transpose.cpp)

find_package(SEAL)
target_link_libraries(vector_ops SEAL::seal)
target_link_libraries(benchmark SEAL::seal)
target_link_libraries(benchmark2 SEAL::seal)
target_link_libraries(matrix_ops SEAL::seal)
target_link_libraries(linear_transformation SEAL::seal)
target_link_libraries(linear_transformation2 SEAL::seal)
target_link_libraries(matrix_multiplication SEAL::seal)
target_link_libraries(matrix_mult_benchmark SEAL::seal)
target_link_libraries(polynomial SEAL::seal)
target_link_libraries(logistic_regression_new SEAL::seal)
target_link_libraries(logistic_regression_kernel SEAL::seal)
target_link_libraries(matrix_transpose SEAL::seal)
